Changed OfferDetails.css and DeveloperDetails2.css to limit the characters showed in email to 20, to avoid overflow

--- a/src/pages/DeveloperDetails2/DeveloperDetails2.css
+++ b/src/pages/DeveloperDetails2/DeveloperDetails2.css
@@ -106,7 +106,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 22ch;
+  max-width: 20ch;
 }
 
 /* .developerDetails2-offer-rating-writeRating-container { */
